<resources>
    <string name="app_name">AniLib</string>
    <string name="app_subtitle">By the power of AniList</string>
    <string name="app_description">Your to be favourite place to manage, track, browse your Anime and Manga and much more.</string>
    <string name="discover">Discover</string>
    <string name="season">Season</string>
    <string name="download">Download</string>
    <string name="dynamically_apply_theme">Dynamically appy theme.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="its_empty">Feeling empty</string>
    <string name="close">Close</string>
    <string name="ep_d_s">Ep: %s · D: %s min</string>
    <string name="chap_s">Chap: %s · Vol: %s</string>
    <string name="manga">Manga</string>
    <string name="please_log_in">Please log in.</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="sign_in">Sign In</string>
    <string name="nav_close">Nav Close</string>
    <string name="nav_open">Nav Open</string>
    <string name="dynamic_theme">Dynamic Theme</string>
    <string name="notification">Notification</string>
    <string name="notification_setting_sub">Control what you see in notification.(Login required)</string>
    <string name="sign_out">Sign Out</string>
    <string name="feed">Feed</string>
    <string name="activity">Activity</string>
    <string name="login_service">Login Service</string>
    <string name="authenticating">Authenticating</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="filter">Filter</string>
    <string name="user_detail_fetch_failed">Failed to fetch user detail.</string>
    <string name="save">Save</string>
    <string name="status">Status</string>
    <string name="score">Score</string>
    <string name="invalid_input_type">Invalid input type.</string>
    <string name="watching">Watching</string>
    <string name="planning">Planning</string>
    <string name="completed">Completed</string>
    <string name="dropped">Dropped</string>
    <string name="paused">Paused</string>
    <string name="rewatching">Rewatching</string>
    <string name="episode_progress">Episode Progress</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">Finish Date</string>
    <string name="total_rewatch">Total Rewatches</string>
    <string name="private_">Private</string>
    <string name="notes">Notes</string>
    <string name="failed_to_save">Failed to save.</string>
    <string name="failed_to_toggle">Failed to toggle.</string>
    <string name="failed_to_delete">Failed to remove.</string>
    <string name="please_wait">Please wait.</string>
    <string name="volume_progress">Volume Progress</string>
    <string name="manga_progress">Manga Progress</string>
    <string name="make_private">Make Private</string>
    <string name="overview">Overview</string>
    <string name="character">Character</string>
    <string name="stats">Stats</string>
    <string name="staff">Staff</string>
    <string name="review">Review</string>
    <string name="watch">Watch</string>
    <string name="open_list_editor">Open list editor</string>
    <string name="delete">Delete</string>
    <string name="toggle_fav">Toggle Favourite</string>
    <string name="operation_failed">Operation failed.</string>
    <string name="type">Type</string>
    <string name="source">Source</string>
    <string name="episodes">Episodes</string>
    <string name="duration">Duration</string>
    <string name="format">Format</string>
    <string name="min_s">%s min</string>
    <string name="chapters">Chapters</string>
    <string name="volumes">Volume</string>
    <string name="start_s_end_s">Start: %s &#160; · &#160; End: %s</string>
    <string name="japanese_title">Japanese</string>
    <string name="english_title">English</string>
    <string name="romaji_title">Romaji</string>
    <string name="description">Description</string>
    <string name="episode_format_s">E: %s · %s</string>
    <string name="too_many_request">Too many request</string>
    <string name="recommendations">Recommendations</string>
    <string name="chapter_format_s">C: %s · %s</string>
    <string name="source_seasonyear_s">%s · %s</string>
    <string name="format_status_s">%s · %s</string>
    <string name="relations">Relations</string>
    <string name="genre">Genre</string>
    <string name="tags">Tags</string>
    <string name="studios">Studios</string>
    <string name="producers">Producers</string>
    <string name="hashtag">Hashtag</string>
    <string name="average_score">Average Score</string>
    <string name="popularity">Popularity</string>
    <string name="favourites">Favourites</string>
    <string name="day">Days</string>
    <string name="hour">Hour</string>
    <string name="min">Min</string>
    <string name="sec">Sec</string>
    <string name="ep_s">Ep %d</string>
    <string name="no_app_found_to_open">No app found to handle url</string>
    <string name="recent_act_per_day">Recent Activity Per Day</string>
    <string name="rankings">Rankings</string>
    <string name="status_distribution">Status Distribution</string>
    <string name="score_distribution">Score Distribution</string>
    <string name="native_name">Native Name</string>
    <string name="alternative_name">Alternative Name</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="invalid">Invalid</string>
    <string name="media">Media</string>
    <string name="voice_role">Voice Roles</string>
    <string name="staff_role">Staff Roles</string>
    <string name="media_format_year_s">%s · %s</string>
    <string name="language">Language</string>
    <string name="studio">Studio</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="streaming_on">Streaming On</string>
    <string name="country">Country</string>
    <string name="year">Year</string>
    <string name="year_disabled">Year (Disabled)</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="unselect_all">Unselect All</string>
    <string name="suggestion">Suggestion</string>
    <string name="recommendation_filter">Recommendation Filter</string>
    <string name="s_slash_s">%s/%s</string>
    <string name="list">List</string>
    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>
    <string name="none">None</string>
    <string name="repeating">Repeating</string>
    <string name="spoiler_alert">Spoiler Alert</string>
    <string name="error">Failed to load</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="blocked">Blocked</string>
    <string name="s_following">%sFollowing</string>
    <string name="s_followers">%sFollowers</string>
    <string name="total_anime">Total Anime</string>
    <string name="days_watched">Days Watched</string>
    <string name="mean_score">Mean Score</string>
    <string name="total_manga">Total Manga</string>
    <string name="chapters_read">Chapters Read</string>
    <string name="saved_to_gallary">Saved to gallary</string>
    <string name="anime">Anime</string>
    <string name="gif">Gif</string>
    <string name="anime_stats">Anime Stats</string>
    <string name="manga_stats">Manga Stats</string>
    <string name="voice_actors">Voice Actors</string>
    <string name="episodes_watched">Episodes Watched</string>
    <string name="days_planned">Days Planned</string>
    <string name="standard_deviation">Standard Deviation</string>
    <string name="volumes_read">Volumes Read</string>
    <string name="format_distribution">Format Distribution</string>
    <string name="country_distribution">Country Distribution</string>
    <string name="release_year">Release Year</string>
    <string name="watch_year">Watch Year</string>
    <string name="read_year">Read Year</string>
    <string name="count">Count</string>
    <string name="time_watched">Time Watched</string>
    <string name="s_day_s_hour">%d d %d h</string>
    <string name="links">Links</string>
    <string name="info">Info</string>
    <string name="add">Add</string>
    <string name="unfollow">Unfollow</string>
    <string name="stop_following_s">Stop following %s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="follow">Follow</string>
    <string name="episode_airing_notif">%s %s %s %s %s</string>
    <string name="thread_notif_s">%s %s %s</string>
    <string name="s_space_s">%s %s</string>
    <string name="new_notification">New notification available</string>
    <string name="airing_schedules">Airing Schedules</string>
    <string name="airing_time_e_s_s">E: %s · %dd %dh %dm %ds </string>
    <string name="format_episode_s">%s · E: %s</string>
    <string name="select_date">Select Date</string>
    <string name="trending">Trending</string>
    <string name="popular">Popular</string>
    <string name="newly_added">Newly Added</string>
    <string name="review_composer">Review Composer</string>
    <string name="write_review">Write review (Min:2200)</string>
    <string name="summary">Summary</string>
    <string name="review_summary">Review Summary (Min:20, Max:120)</string>
    <string name="save_review">Save Review</string>
    <string name="check_character_length">Check Character Length</string>
    <string name="review_score_format">Score: %s/100</string>
    <string name="review_by">Review by %s</string>
    <string name="s_out_of_s_liked_this_review">%s out of %s liked this review</string>
    <string name="review_of_s_by_s">Review of %s by %s</string>
    <string name="recent_reviews">Recent Reviews</string>
    <string name="reviews">Reviews</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="exit">Exit</string>
    <string name="patreon">Patreon</string>
    <string name="bmc_title">Buy Me A Coffee</string>
    <string name="support_the_app">Support Me On Patreon</string>
    <string name="support_the_app_bmc">Support Me On BMC</string>
    <string name="help_this_app">Contribute AniLib to help me create and maintain awesome features.</string>
    <string name="help_this_app_bmc">Help me get some caffeine power. Your one cup of coffee could bring out some latent power.⚡⚡⚡</string>
    <string name="apache_2">Apache 2.0</string>
    <string name="mit">MIT</string>
    <string name="sources">Sources</string>
    <string name="license_desc">View full license.</string>
    <string name="license_sources_desc">View sources on GitHub.</string>
    <string name="apache_url">http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="license_apollo_android">Apollo-Android</string>
    <string name="license_copy_apollo_android">Copyright © 2019 Meteor Development Group, Inc.</string>
    <string name="license_rx_android">RxAndroid</string>
    <string name="license_copy_rx_android">Copyright 2015 The RxAndroid authors</string>
    <string name="license_eventbus">EventBus</string>
    <string name="add_torrent">Add Torrent</string>
    <string name="hash">Hash</string>
    <string name="path">Path</string>
    <string name="size">Size</string>
    <string name="pieces">Pieces</string>
    <string name="files">Files</string>
    <string name="seeders_leechers">Seeders(S) · Leechers(L)</string>
    <string name="peers">Peers</string>
    <string name="speed">Speed</string>
    <string name="downloaded_uploaded">Downloaded · Uploaded</string>
    <string name="eta">Eta</string>
    <string name="added">Added</string>
    <string name="created">Created</string>
    <string name="resume_all">Resume All</string>
    <string name="pause_all">Pause All</string>
</resources>