<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addTorrentMenu"
        android:icon="@drawable/ic_add"
        android:title="@string/add_torrent"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/resumeAllMenu"
        android:icon="@drawable/ic_play"
        android:title="@string/resume_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/pauseAllMenu"
        android:icon="@drawable/ic_pause"
        android:title="@string/pause_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/sortTorrentMenu"
        android:icon="@drawable/ads_ic_sort"
        android:title="@string/sort"
        app:showAsAction="never" />



    <item
        android:id="@+id/exitMenu"
        android:icon="@drawable/ic_exit"
        android:title="@string/exit"
        app:showAsAction="never" />

</menu>